deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dese-ea-plan-v5
  labels:
    name: dese-ea-plan-v5
    app.kubernetes.io/name: dese-ea-plan-v5
    app.kubernetes.io/version: "5.0.0"
    app.kubernetes.io/component: platform
    app.kubernetes.io/part-of: cpt-optimization
